# Word_n_unitary

./: CMakeLists.txt  README.md
include/: Word_n_unitary.hpp
src/: Main.cpp  Word_n_unitary.cpp
tests/: Tests_word_n_unitary.cpp
